--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
              <div class="head-section-heading">
                ABOUT US
              </div>
-             Data recovery in Indore means Com-net Solutions, Indore. Com-net solutions recovering data from Microsoft Window 3.1 to all latest version of windows family as well as Linux, Suse,  . We also recover your important and valuable data from Home versions to Server versions. It doesn't matter whether it is FAT or NTFS file system, Logical problem ( windows not booting system ), crashed window, blue screen, missing partition, formatted, virus problem, accidentally deleted or your disk is making any noise or system restarts any time.
+             Looking for data recovery in Indore? COM-NET SOLUTIONS is your perfect answer. We expertise in recovering data from various operating systems, be it windows 3.1 to any latest version of windows, linux or suse. Worry no more about your valuable data because we, at COM-NET SOLUTIONS understand its importance. Recovering data from home versions to server versions, dealing with FAT or NTFS file system  or virus issues, solving logical problems, recovering accidentally deleted files or data from missing partitions are some of the services provided by us. 
           </div>
          </div>
          <div class="head-section" data-aos="fade-up-left">
